<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#49A9A9"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/main_title"
        android:textColor="#FAFAFA"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/mainTextAdresse"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/main_rue"
        android:padding="5dp"
        />


    <EditText
        android:id="@+id/mainTextCodePostal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/main_code_postal"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/mainTextVille"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/main_ville"
        android:padding="5dp"
        />


    <EditText
        android:id="@+id/mainTextEtage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/main_etage"
        android:padding="5dp"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ascenseur" />

    <Button
        android:id="@+id/buttonValiderAppart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#49A9A9"
        android:text="Créer" />



</LinearLayout>